@@ -11,6 +11,8 @@ cdebconf-entropy (0.9) UNRELEASED; urgency=low
     - Display a completion percentage while gathering entropy.
     - Disallow entering more character once enough entropy has been gathered.
     - Reset text entry after gathering more entropy.
+  * In the GTK+ plugin, the cleanup function is now also called when the
+    "Go back" is activated.
 
  -- Jérémy Bobbio <lunar@debian.org>  Thu, 08 May 2008 13:37:50 +0000
 
